# c64hacks

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  linker.ld  project-config.json
cmake/: CMakeLists.txt  app.cmake  libcpp64.cmake  project.cmake  readme.txt
libcpp64/: CMakeLists.txt
libcpp64/include/: algorithm  array  memory  sys
libcpp64/include/libcpp64/: audio.h  auxiliary.h  keyboard.h  system.h  video.h
libcpp64/src/: audio.cpp  auxiliary.cpp  keyboard.cpp  system.cpp  unused.cpp  video.cpp
resources/: charset.ctm  music.cpp  music.sid  sprites.cpp  sprites.spd  sprites.spm  tables.cpp
src/: asm_main.s  main.cpp  raster.asm
tools/: bitmap2cpp.py  dis64  dis64.bat  dis64.py  disk64  disk64.bat  disk64.py  sidc  sidc.bat  sidc.py
variants/asm/: project-config.json
variants/asm/lib64/include/lib64/: libmacro64.asm  libstd64.asm
variants/asm/src/: audio.asm  main.asm  sprite.asm  sprites.asm
variants/c/: project-config.json
variants/c/libc64/src/: sprite.c
variants/c/src/: main.c
